@@ -12,6 +12,7 @@ import net.minecraft.network.chat.Component;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
+import java.util.Objects;
 
 public class ReferenceWidget implements IWidget {
     private final RelativeRect bounds;
@@ -19,9 +20,9 @@ public class ReferenceWidget implements IWidget {
 
     public ReferenceWidget(IWidgetUtils utils, IDataNode entry, RelativeRect rect, int maxWidth) {
         if (entry instanceof ListNode listNode && !listNode.nodes().isEmpty()) {
-            widget = new LootTableWidget(utils, ((ReferenceNode) entry).nodes().get(0), rect, maxWidth, entry);
+            widget = new LootTableWidget(utils, ((ReferenceNode) entry).nodes().getFirst(), rect, maxWidth, entry);
         } else {
-            widget = new MissingWidget(rect);
+            widget = new MissingWidget(Objects.requireNonNull(utils.lookupProvider()), rect);
         }
 
         bounds = widget.getRect();
